Fix overflow on food list

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -66,7 +66,8 @@ aside.closed > p {
 }
 
 .food-list {
-  max-height: 300px;
+  max-height: 70vh;
+  overflow-y: scroll;
 }
 
 .hamburger {
